update BookingServiceTest with cache hit/miss/empty test cases